remove +PrintGCDetails for jdk9+